# praesidium

./: .gitignore  Cargo.toml  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
abi/: Cargo.toml
abi/src/: encode.rs  invoke.rs  lib.rs  pex.rs
abi/tests/: pex.rs
cap-core/: Cargo.toml
cap-core/src/: cap.rs  cspace.rs  lib.rs  rights.rs  sched.rs
cap-core/tests/: ui.rs
cap-core/tests/ui/: forge_cap.rs  forge_cap.stderr
fixtures/: praesidium-rich.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ipc_message.rs  pex_parse.rs
ipc/: Cargo.toml
ipc/src/: endpoint.rs  lib.rs  message.rs  notification.rs
kernel/: Cargo.toml  linker-aarch64.ld  linker-x86_64.ld
kernel/src/: heap.rs  main.rs  serial.rs  sync.rs  syscall.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: context.rs  interrupts.rs  mod.rs  mte.rs  paging.rs  timer.rs  user.rs
kernel/src/arch/x86_64/: context.rs  interrupts.rs  mod.rs  paging.rs  pku.rs  timer.rs  user.rs
kernel/src/boot/: handoff.rs  mod.rs
kernel/src/cap/: mod.rs
kernel/src/ipc/: mod.rs
kernel/src/isolation/: mod.rs
kernel/src/loader/: demo.rs  mod.rs
kernel/src/memory/: mod.rs
kernel/src/sched/: mod.rs  scheduler.rs
kernel/src/user/: mod.rs
mem/: Cargo.toml
mem/src/: buddy.rs  frame.rs  lib.rs  retype.rs  slab.rs
refproc/: Cargo.toml  linker-user.ld
refproc/src/: crashd.rs  echocli.rs  echod.rs  evil.rs  lib.rs  ping.rs  pong.rs  restartcli.rs  waiter.rs
sched/: Cargo.toml
sched/src/: executor.rs  lib.rs  task.rs  waker.rs
tools/: Cargo.toml
tools/src/: mkpex.rs
xtask/: Cargo.toml
xtask/src/: main.rs
