# abi — the shared contract between kernel and userspace (ADR-0006).
#
# Defines the capability-invocation syscall ABI and the .pex executable format (including the
# capability manifest). Depended on by `kernel`, `refproc`, and `tools` — but depends on none
# of them, so it's the stable seam both sides build against. Analogous to Warden's frozen
# `warden-abi`. Keep it #![no_std] so userspace and kernel can both use it.

[package]
name         = "abi"
version      = "0.0.1"
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description  = "Praesidium syscall ABI + .pex executable format — the frozen kernel<->userspace contract (ADR-0006)."

[dependencies]
bitflags.workspace = true
static_assertions.workspace = true   # #[repr(C)] layout tripwires on ABI structs (Warden-style)

[lints.clippy]
undocumented_unsafe_blocks = "warn"
