# refproc — v1 reference userspace processes (P7b). DETACHED workspace (the empty [workspace]
# below, like fuzz/) so it never perturbs the main workspace's host builds / build-std / -D
# warnings gates. xtask builds it standalone for a bare-metal *userspace* target with a low-VA
# linker script + build-std, then packages each binary to a .pex via tools/mkpex.
#
# A userspace process talks to the kernel ONLY through the shared `abi` crate (capability
# invocations) — it has no business depending on kernel internals. Soft-float (the kernel context
# switch preserves no FP/SIMD; userspace FP save/restore is a post-v1 gate).
[package]
name = "refproc"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Antonio (architect)"]
repository = "https://github.com/amorgado19/praesidium"
description = "Praesidium v1 reference userspace processes — prove capability IPC + isolation (P7b)."
publish = false

# Shared no_std runtime (syscall stub, exit, panic handler) for the reference binaries.
[lib]
name = "refproc"
path = "src/lib.rs"

# Two minimal processes: `ping` sends over a capability endpoint, `pong` receives + replies; they
# demonstrate cross-process capability IPC (AC7.2) and, in P7b-ii, that they cannot read each
# other's memory (AC7.3). Each is its own tiny native binary, packaged to a `.pex`.
[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "pong"
path = "src/pong.rs"

[dependencies]
abi = { path = "../abi" } # userspace touches the kernel ONLY through the ABI

# no_std userspace: no unwinding runtime — a panic aborts (the panic handler exits the process).
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
opt-level = "s"

[lints.clippy]
undocumented_unsafe_blocks = "warn"

# Detached from the main workspace (see header) — must be last.
[workspace]
